Set button label text overflow to avoid a11y warnings (#667)

--- a/source/sass/component/_button.scss
+++ b/source/sass/component/_button.scss
@@ -98,6 +98,7 @@ $c-button-border-width: var(--c-button-border-width, $border-width-button) !defa
             display: inline-block;
             align-items: center;
             white-space: nowrap;
+            overflow: auto;
 
             &--reverse {
                 order: 2;
